--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,8 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-mox-*.tar
+ersatz-*.tar
 
+# IntelliJ IDEA files
+.idea
+*.iml
