--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - checkout
       - run: mix local.hex --force
+      - run: mix local.rebar --force
       - run: mix deps.get
       - persist_to_workspace:
           root: .
@@ -22,14 +23,15 @@ jobs:
     steps:
       - checkout
       - run: mix local.hex --force
+      - run: mix local.rebar --force
       - attach_workspace:
-          at: deps
+          at: .
       - run: mix test
       - run: mix espec
 
 workflows:
   version: 2
-  build-and-deploy:
+  build-and-test:
     jobs:
       - get_dependencies
       - test:
